syntax = "proto3";

package kratos.api;

import "google/protobuf/duration.proto";

option go_package = "node-proxy/internal/conf;conf";

message Bootstrap {
    Server server = 1;
    Data data = 2;
    TokenList tokenList = 3;
}

message Server {
    message HTTP {
        string network = 1;
        string addr = 2;
        google.protobuf.Duration timeout = 3;
    }
    message GRPC {
        string network = 1;
        string addr = 2;
        google.protobuf.Duration timeout = 3;
    }
    HTTP http = 1;
    GRPC grpc = 2;
}

message Data {
    message Database {
        string driver = 1;
        string source = 2;
    }
    message Redis {
        int64 db = 1;
        string addr = 2;
        google.protobuf.Duration read_timeout = 3;
        google.protobuf.Duration write_timeout = 4;
    }
    Database database = 1;
    Redis redis = 2;
}

message TokenList {
    message CoinGecko {
        string baseURL = 1;
    }
    message CoinMarketCap {
        string baseURL = 1;
        string key = 2;
    }
    CoinGecko coingecko = 1;
    CoinMarketCap coinmarketcap = 2;
    string logoPrefix = 3;
}
